--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation 'org.apache.httpcomponents:httpclient:4.5.13'
     implementation 'com.sun.mail:jakarta.mail:2.0.1'
+    implementation 'org.opensmpp:opensmpp-core:3.0.0'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
     implementation("com.zaxxer:HikariCP:5.0.0")
